center loading text and fix spacing in search placeholder

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -10,3 +10,10 @@ h1{
     font-weight: 200;
     color: #0ccac4;
 }
+
+.loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
